annotation on qr code generation fixed
